[package]
name = "pio_to_arduino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
zip = "0.6.6"
